# svgo-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  io.rs  main.rs
crates/cli/tests/: cli.rs  e2e.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  config.rs  lib.rs  optimize.rs  parser.rs  plugin.rs  stringifier.rs  visitor.rs
crates/core/tests/: engine.rs  roundtrip.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: cleanup_attrs.rs  cleanup_enable_background.rs  cleanup_ids.rs  cleanup_numeric_values.rs  collapse_groups.rs  collections.rs  convert_colors.rs  convert_ellipse_to_circle.rs  convert_path_data.rs  convert_shape_to_path.rs  convert_transform.rs  inline_styles.rs  lib.rs  merge_paths.rs  merge_styles.rs  minify_styles.rs  move_elems_attrs_to_group.rs  move_group_attrs_to_elems.rs  remove_comments.rs  remove_desc.rs  remove_doctype.rs  remove_editors_ns_data.rs  remove_empty_attrs.rs  remove_empty_containers.rs  remove_empty_text.rs  remove_hidden_elems.rs  remove_metadata.rs  remove_non_inheritable_group_attrs.rs  remove_unknowns_and_defaults.rs  remove_unused_ns.rs  remove_useless_defs.rs  remove_useless_stroke_and_fill.rs  remove_view_box.rs  remove_xml_proc_inst.rs  sort_attrs.rs  sort_defs_children.rs  transforms.rs
crates/plugins/src/path/: mod.rs
crates/plugins/tests/: batch_a.rs  batch_b.rs  batch_c.rs  batch_d.rs
crates/plugins/tests/common/: mod.rs
crates/plugins/tests/fixtures/removeComments/: removeComments.01.svg.txt  (+2 more)
docs/: CONFORMANCE.md
(+62 files in other folders)
